Ahora la contrasenia para agregar un usuario muestra la animacion de forma correcta

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -157,17 +157,17 @@
                         </h:dataTable>
                     </div>
                     <h:panelGroup layout="block" id="tabla-vacia" rendered="#{empty grupoAlumnoControlador.tareaAlumnoGrupoModeloLista}">
-                        <table class="tabla-alumnos uk-table uk-table-justify uk-table-small uk-table-middle tablaPrimaria">
+                        <table class="tabla-alumnos uk-table uk-table-justify uk-table-small uk-table-middle tablaPrimaria uk-margin-top">
                             <thead class="">
                             <tr>
-                                <th class="thPrimario"><span class="letra-titulo">nombre</span></th>
-                                <th class="thPrimario"><span class="letra-titulo">#{alumno['for.all.views.mind.map']}</span></th>
-                                <th class="thPrimario"><span class="letra-titulo">#{alumno['activities.bar.icon.order']}</span></th>
-                                <th class="thPrimario"><span class="letra-titulo">#{alumno['more.activity.title.match.image']}</span></th>
-                                <th class="thPrimario"><span class="letra-titulo">#{alumno['more.activity.title.order.prayer']}</span></th>
-                                <th class="thPrimario"><span class="letra-titulo">#{alumno['more.activity.title.matching.words']}</span></th>
-                                <th class="thPrimario"><span class="letra-titulo">#{alumno['more.activity.title.complete.prayers']}</span></th>
-                                <th class="thPrimario"><span class="letra-titulo">#{etiqueta['options']}</span></th>
+                                <th class="thPrimario">nombre</th>
+                                <th class="thPrimario">#{alumno['for.all.views.mind.map']}</th>
+                                <th class="thPrimario">#{alumno['activities.bar.icon.order']}</th>
+                                <th class="thPrimario">#{alumno['more.activity.title.match.image']}</th>
+                                <th class="thPrimario">#{alumno['more.activity.title.order.prayer']}</th>
+                                <th class="thPrimario">#{alumno['more.activity.title.matching.words']}</th>
+                                <th class="thPrimario">#{alumno['more.activity.title.complete.prayers']}</th>
+                                <th class="thPrimario">#{etiqueta['options']}</th>
                             </tr>
                             </thead>
                             <tbody>
