--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -76,7 +76,7 @@
                 <div class="uk-margin-medium-top">
 <!--                    <button class="boton-escuadron-base">Limpiar</button>-->
                     <h:button styleClass="boton-maestro-base" value="regresar" outcome="regresar"/>
-                    <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base">agregar</button>
+                    <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base agregar">agregar</button>
                     <h:form>
                         <h:commandButton id="apodos-ver" styleClass="boton-escuadron-base" value="Limpiar">
                             <f:ajax  listener="#{agregarCsvControlador.actualizar}"
