--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -73,7 +73,7 @@
             </div>
             <div class="botones uk-width-2-3@m">
                 <h:button styleClass="boton-maestro-base" value="regresar" outcome="tablero"/>
-                <h:button styleClass="boton-escuadron-base" value="agregar-csv" outcome="agregar-csv"/>
+                <h:button styleClass="boton-escuadron-base" value="agregar-csv" outcome="agregar"/>
                 <button class="boton-escuadron-base uk-text-uppercase" uk-toggle="target: #modal-password">passwords</button>
                 <button class="boton-escuadron-base reporte"
                         disabled="#{empty grupoAlumnoControlador.tareaAlumnoGrupoModeloLista ? 'disabled' : ''}"
