valor barras profesor y estilos dashboard calificacion

--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -264,6 +264,7 @@
             </div>
         </section>
         <h:outputScript library="js" name="Chart.js"/>
+        <h:outputScript library="js" name="/profesor/tarea-alumno.js"/>
     </ui:define>
 </ui:composition>
 
