--- a/tecolotl-web/src/main/webapp/administracion/ciclos-escolares.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/ciclos-escolares.xhtml
@@ -39,16 +39,18 @@
             <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #modal-CicloEscolar">Agregar Ciclo Escolar</button>
             <div id="modal-CicloEscolar" class="uk-flex-center" uk-modal="">
                 <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
-                    <h:form styleClass="uk-grid" pt:ukgrid="">
+                    <h2 class="uk-h2">Agregar nuevo Ciclo Escolar</h2>
+                    <h:form id="inserta-cicloEscolar" styleClass="uk-grid" pt:ukgrid="">
                         <div class="uk-width-1-2">
                             <div class="uk-form-controls uk-margin-small">
                                 <h:outputLabel value="Clave Centro de Trabajo" styleClass="uk-form-label" for="clave-centro"/>
                                 <h:inputText id="clave-centro"
                                              pt:placeholder="21DBA0014J"
+                                             pt:readonly="readonly"
                                              value="#{ciclosEscolaresControlador.cicloEscolarModelo.idEscuela}"
                                              styleClass="uk-input">
                                     <f:validateRequired/>
-                                    <f:validateLength minimum="10" maximum="10"/>
+                                    <f:validateLength minimum="10" maximum="14"/>
                                 </h:inputText>
                             </div>
                             <div class="uk-form-controls uk-margin-small">
@@ -61,8 +63,8 @@
                                 </h:inputText>
                             </div>
                             <div class="uk-form-controls uk-margin-small">
-                                <h:outputLabel value="Estatus" styleClass="uk-form-label" for="estatus"/><br/>
                                 <h:selectBooleanCheckbox id="estatus"
+                                                         pt:hidden="hidden"
                                                          value="#{ciclosEscolaresControlador.cicloEscolarModelo.activo}"
                                                          styleClass="uk-checkbox" >
                                 </h:selectBooleanCheckbox>
@@ -90,7 +92,7 @@
                         </div>
                         <div class="uk-width-1-1 uk-text-right">
                             <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
-                            <h:commandButton styleClass="uk-button uk-button-primary" value="Agregar">
+                            <h:commandButton styleClass="uk-button letra-titulo" pt:style="background-color: #00A859;" value="Agregar">
                                 <f:ajax execute="@form" listener="#{ciclosEscolaresControlador.insertaCicloEscolar}" render="tabla-ciclos-escolares" onevent="function exit(){
                                 UIkit.modal(document.getElementById('modal-CicloEscolar')).hide();
                             }"/>
@@ -118,23 +120,27 @@
                 <h:column>
                     <f:facet name="header"><h:outputText value="Opciones" styleClass="letra-titulo"/></f:facet>
                     <h:outputText pt:uk-icon="more-vertical" styleClass="uk-icon-button uk-text-center"/>
-                    <h:panelGroup layout="block" styleClass="uk-dropdown" pt:uk-dropdown="mode: click">
+                    <h:panelGroup id="menu-tabla" layout="block" styleClass="uk-dropdown" pt:uk-dropdown="mode: click">
                         <ul class="uk-nav uk-dropdown-nav uk-text-left">
                             <li>
                                 <h:commandLink value="Editar"
-                                               styleClass="uk-margin-small"
+                                               styleClass="uk-margin-small-right uk-text-primary"
                                                pt:type="button"
                                                pt:uk-icon="icon: file-edit"
                                                pt:uk-toggle="target: #modal-editaCicloEscolar"
-                                               ><f:ajax listener="#{ciclosEscolaresControlador.seleccionaCicloEscolar}" render="edita-cicloEscolar"/></h:commandLink>
+                                ><f:ajax listener="#{ciclosEscolaresControlador.seleccionaCicloEscolar}" render="edita-cicloEscolar" onevent="function editarMenu(){
+                                    UIkit.dropdown(document.getElementById('menu-tabla')).hide();
+                                }"/></h:commandLink>
                             </li>
                             <li>
                                 <h:commandLink value="Eliminar"
-                                               styleClass="uk-margin-small-right"
+                                               styleClass="uk-margin-small-right uk-text-danger"
                                                pt:type="button"
                                                pt:uk-icon="icon: trash"
                                                pt:uk-toggle="target: #modal-eliminaCicloEscolar"
-                                                ><f:ajax listener="#{ciclosEscolaresControlador.seleccionaCicloEscolar}" render="elimina-cicloEscolar"/>
+                                ><f:ajax listener="#{ciclosEscolaresControlador.seleccionaCicloEscolar}" render="elimina-cicloEscolar" onevent="function eliminarMenu(){
+                                    UIkit.dropdown(document.getElementById('menu-tabla')).hide();
+                                }"/>
                                 </h:commandLink>
                             </li>
                         </ul>
@@ -143,8 +149,9 @@
             </h:dataTable>
             <div id="modal-editaCicloEscolar" class="uk-flex-center" uk-modal="">
                 <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+                    <h2 class="uk-h2">Editar Ciclo Escolar</h2>
                     <h:form id="edita-cicloEscolar" styleClass="uk-grid" pt:ukgrid="">
-                        <div class="uk-width-1-2">
+                        <div class="uk-width-1-2 " >
                             <div class="uk-form-controls uk-margin-small">
                                 <h:outputLabel value="Clave Centro de Trabajo" styleClass="uk-form-label" for="clave-centro1"/>
                                 <h:inputText id="clave-centro1"
@@ -154,7 +161,7 @@
                                              styleClass="uk-input">
                                     <f:ajax/>
                                     <f:validateRequired/>
-                                    <f:validateLength minimum="10" maximum="10"/>
+                                    <f:validateLength minimum="10" maximum="14"/>
                                 </h:inputText>
                             </div>
                             <div class="uk-form-controls uk-margin-small">
@@ -219,21 +226,21 @@
                         <h2 class="uk-h2">¿Desea eliminar el ciclo escolar?</h2>
                         <div class="uk-width-1-2">
                             <div class="uk-form-controls uk-margin-small">
-                                <h:outputLabel value="Clave Centro de Trabajo" styleClass="uk-form-label" for="clave-centro2"/>
                                 <h:inputText id="clave-centro2"
                                              value="#{ciclosEscolaresControlador.cicloEscolarModelo.idEscuela}"
                                              pt:readonly="readonly"
+                                             pt:hidden="hidden"
                                              required="true"
                                              styleClass="uk-input">
                                     <f:ajax/>
                                     <f:validateRequired/>
-                                    <f:validateLength minimum="10" maximum="10"/>
+                                    <f:validateLength minimum="10" maximum="14"/>
                                 </h:inputText>
                             </div>
                             <div class="uk-form-controls uk-margin-small">
-                                <h:outputLabel value="Descripcion" styleClass="uk-form-label" for="descripcion2"/>
                                 <h:inputText id="descripcion2"
                                              pt:readonly="readonly"
+                                             pt:hidden="hidden"
                                              value="#{ciclosEscolaresControlador.cicloEscolarModelo.descripcion}"
                                              styleClass="uk-input">
                                     <f:ajax/>
@@ -242,9 +249,9 @@
                                 </h:inputText>
                             </div>
                             <div class="uk-form-controls uk-margin-small">
-                                <h:outputLabel value="Estatus" styleClass="uk-form-label" for="estatus2"/><br/>
                                 <h:selectBooleanCheckbox id="estatus2"
-                                                         disabled="true"
+                                                         pt:readonly="readonly"
+                                                         pt:hidden="hidden"
                                                          value="#{ciclosEscolaresControlador.cicloEscolarModelo.activo}"
                                                          styleClass="uk-checkbox" >
                                     <f:ajax/>
@@ -253,9 +260,9 @@
                         </div>
                         <div class="uk-width-1-2">
                             <div class="uk-form-controls uk-margin-small">
-                                <h:outputLabel value="Inicio" styleClass="uk-form-label" for="inicio2"/>
                                 <h:inputText a:type="date" id="inicio2"
                                              pt:placeholder="DD/MM/YYYY"
+                                             pt:hidden="hidden"
                                              value="#{ciclosEscolaresControlador.cicloEscolarModelo.inicio}"
                                              required="true"
                                              pt:readonly="readonly"
@@ -265,9 +272,9 @@
                                 </h:inputText>
                             </div>
                             <div class="uk-form-controls uk-margin-small">
-                                <h:outputLabel value="Fin" styleClass="uk-form-label" for="fin2"/>
                                 <h:inputText a:type="date" id="fin2"
                                              pt:placeholder="DD/MM/YYYY"
+                                             pt:hidden="hidden"
                                              value="#{ciclosEscolaresControlador.cicloEscolarModelo.fin}"
                                              required="true"
                                              pt:readonly="readonly"
