Se actualiza resources bundle para eliminar los signos de ??edit?? y se cambia el placeholder de numero exterior por interior.

--- a/tecolotl-web/src/main/webapp/administracion/catalogo-administracion.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/catalogo-administracion.xhtml
@@ -266,7 +266,7 @@
                                             <f:validateRequired/>
                                             <f:validateLength minimum="4" maximum="5"/>
                                         </h:inputText>
-                                        <h:commandLink styleClass="uk-button uk-button-secondary uk-margin-small-right">
+                                        <h:commandLink styleClass="uk-button uk-button-secondary uk-margin-small-right acomoda">
                                             #{boton['search']}
                                             <h:outputText pt:uk-icon="icon: location" styleClass="uk-icon uk-margin-small-right"/>
                                             <f:ajax execute="@form" render="@form formulario-tabla-colonia" listener="#{catalogoColoniaControlador.actualizaDataModel}"/>
