--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -86,13 +86,13 @@
                         <div class="uk-width-1-5@m uk-width-1-1@s">
                             <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="numero-exterior" value="#{administracion['dashboard.modal.street.num.ext']}"/>
                             <div class="uk-form-controls">
-                                <h:inputText id="numero-exterior" pt:placeholder="Número interior" disabled="true" styleClass="uk-input" value="#{detalleEscuelaControlador.escuelaDetalleModelo.numeroExterior}"/>
+                                <h:inputText id="numero-exterior" pt:placeholder="Número exterior" disabled="true" styleClass="uk-input" value="#{detalleEscuelaControlador.escuelaDetalleModelo.numeroExterior}"/>
                             </div>
                         </div>
                         <div class="uk-width-1-5@m uk-width-1-1@s">
                             <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="numero-interior" value="#{administracion['dashboard.modal.street.num.int']}"/>
                             <div class="uk-form-controls">
-                                <h:inputText id="numero-interior" pt:placeholder="Número exterior" disabled="true" styleClass="uk-input" value="#{detalleEscuelaControlador.escuelaDetalleModelo.numeroInterior}"/>
+                                <h:inputText id="numero-interior" pt:placeholder="Número interior" disabled="true" styleClass="uk-input" value="#{detalleEscuelaControlador.escuelaDetalleModelo.numeroInterior}"/>
                             </div>
                         </div>
                         <div class="uk-width-1-5@m uk-width-1-1@s">
