actividad en grafica profesor y dashboar alumno puntaje

--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -125,7 +125,7 @@
                 <div>
                     <span>#{alumnoTareasNivelModelo.idGrupo}</span><span>#{alumnoTareasNivelModelo.idAlumno}</span>
                     <span>#{alumnoTareasNivelModelo.nombre} #{alumnoTareasNivelModelo.apellidoPaterno} #{alumnoTareasNivelModelo.apellidoMaterno}</span>
-                    <span>#{alumnoTareasNivelModelo.totalTareas}</span><span>#{alumnoTareasNivelModelo.nivelLenguaje}</span>
+                    <span>#{alumnoTareasNivelModelo.totalTareas}</span><span>#{alumnoTareasNivelModelo.nivelLenguaje}</span><span>#{alumnoTareasNivelModelo.nivelLenguajeAlumno}</span>
                 </div>
             </ui:repeat>
         </h:panelGroup>
